@@ -11,6 +11,7 @@ version <next>:
 - rubberband filter
 - tremolo filter
 - agate filter
+- chromakey filter
 
 
 version 2.8:
